--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
     ],
     "require-dev": {
         "phpunit/phpunit": "^10.5"
+    },
+    "require": {
+        "guzzlehttp/guzzle": "^7.8"
     }
 }
